Clean up and removal of old qmg libraries