@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
 
     <groupId>com.qmetric.document</groupId>
     <artifactId>pdf-watermark</artifactId>
@@ -11,31 +18,24 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-        <maven-release-plugin.version>2.1</maven-release-plugin.version>
-        <maven-surefire-plugin.version>2.8</maven-surefire-plugin.version>
-        <maven-versions-plugin.version>1.2</maven-versions-plugin.version>
-
         <bouncycastle.version>1.46</bouncycastle.version>
         <hamcrest.version>1.1</hamcrest.version>
         <itext.version>5.1.0</itext.version>
         <junit.version>4.8.1</junit.version>
         <mockito.version>1.8.5</mockito.version>
         <qmg-testing.version>3.1</qmg-testing.version>
-        <qmg-utilities.version>3.4</qmg-utilities.version>
         <xstream.version>1.4.2</xstream.version>
     </properties>
 
     <build>
         <plugins>
-            <!-- Java 1.6 usage -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
@@ -43,7 +43,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>${maven-release-plugin.version}</version>
+                <version>2.1</version>
                 <configuration>
                     <goals>deploy</goals>
                 </configuration>
@@ -52,37 +52,19 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <forkMode>once</forkMode>
-                    <argLine>-Xmx1G -XX:MaxPermSize=512m</argLine>
-                    <testNGArtifactName>none:none</testNGArtifactName>
-                    <testFailureIgnore>false</testFailureIgnore>
-                </configuration>
+                <version>2.8</version>
             </plugin>
 
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
-                <version>${maven-versions-plugin.version}</version>
+                <version>1.2</version>
             </plugin>
 
         </plugins>
     </build>
 
     <dependencies>
-
-        <dependency>
-            <groupId>com.qmetric.utilities</groupId>
-            <artifactId>file</artifactId>
-            <version>${qmg-utilities.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.qmetric.utilities</groupId>
-            <artifactId>io</artifactId>
-            <version>${qmg-utilities.version}</version>
-        </dependency>
 
         <dependency>
             <groupId>com.itextpdf</groupId>
@@ -121,19 +103,6 @@
         </dependency>
 
     </dependencies>
-
-    <distributionManagement>
-        <snapshotRepository>
-            <id>nexus</id>
-            <name>qmetric-snapshot</name>
-            <url>https://ci.qmetric.co.uk/nexus/content/repositories/qmetric-snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>nexus</id>
-            <name>qmetric-releases</name>
-            <url>https://ci.qmetric.co.uk/nexus/content/repositories/qmetric-releases</url>
-        </repository>
-    </distributionManagement>
 
     <scm>
         <url>git://github.com/qmetric/pdf-watermark.git</url>
